<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/editRowScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/edit_row_medicine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines_title_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF444444" />

            <EditText
                android:id="@+id/edit_row_medicine_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicines_hint_name"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/edit_row_imageView1"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@color/pillerkollen_light_green" />

            <TextView
                android:id="@+id/edit_row_medicine_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines_title_type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF444444" />

            <EditText
                android:id="@+id/edit_row_medicine_type_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicines_hint_type"
                android:inputType="text" />

            <!-- <Spinner -->
            <!-- android:id="@+id/edit_row_medicine_type_spinner" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content"  /> -->

            <ImageView
                android:id="@+id/edit_row_imageView2"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@color/pillerkollen_light_green" />

            <TextView
                android:id="@+id/edit_row_medicine_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines_title_dosage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF444444" />

            <EditText
                android:id="@+id/edit_row_medicine_dosage_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicines_hint_dosage"
                android:inputType="text" />

            <!-- <Spinner -->
            <!-- android:id="@+id/edit_row_task_spinner" -->
            <!-- android:layout_width="match_parent" -->
            <!-- android:layout_height="wrap_content" -->

            <ImageView
                android:id="@+id/edit_row_imageView3"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@color/pillerkollen_light_green" />

            <TextView
                android:id="@+id/edit_row_medicine_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines_title_unit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF444444" />

            <EditText
                android:id="@+id/edit_row_medicine_unit_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicines_hint_unit"
                android:inputType="text" />

            <ImageView
                android:id="@+id/edit_row_imageView4"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@color/pillerkollen_light_green" />

            <TextView
                android:id="@+id/edit_row_medicine_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines_title_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF444444" />

            <EditText
                android:id="@+id/edit_row_medicine_description_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/medicines_hint_description" >

                <!-- <requestFocus /> -->
            </EditText>

            <ImageView
                android:id="@+id/edit_row_imageView5"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@color/pillerkollen_light_green" />

            <LinearLayout
                android:id="@+id/edit_row_button_bar"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:showDividers="middle" >

                <Button
                    android:id="@+id/edit_row_cancel_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_row_cancel_button" />

                <Button
                    android:id="@+id/edit_row_save_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_row_save_button" />
            </LinearLayout>

            <ImageView
                android:id="@+id/edit_row_imageView6"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@color/pillerkollen_light_green" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>