<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="@drawable/medicine_row_background" 
    android:textIsSelectable="false">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_launcher" 
        android:contentDescription="@null">
    </ImageView>

    <TextView
        android:id="@+id/medicinesRowName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/medicines_title_name"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/medicinesRowType"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/medicines_title_type"
        android:textSize="20sp"
        android:visibility="gone">
    </TextView>

    <TextView
        android:id="@+id/medicinesRowDescription"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/medicines_title_description"
        android:textSize="20sp"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/medicinesRowDosage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicines_title_unit"
        android:textSize="20sp" >
    </TextView>

    <TextView
        android:id="@+id/medicinesRowUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicines_title_unit"
        android:textSize="20sp" >
    </TextView>
</LinearLayout>