<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/add_row_medicine_dosage_input"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:hint="@string/medicines_hint_dosage_value"
        android:inputType="number"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi" />

    <EditText
        android:id="@+id/add_row_medicine_unit_input"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:hint="@string/medicines_hint_unit_value"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi" />

    <TextView
        android:id="@+id/add_row_medicine_unit_text"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/medicines_hint_unit_value"
        android:textSize="18sp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/add_row_medicine_remove_dosage_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/remove_button"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_action_remove" />

</TableRow>